URL Hash when Nav Click

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="content" id="home">
             <div id="webgl-container"></div>
             <h1>Welcome to Luxuro</h1>
-            <p style="font-weight:normal">Discover a world of financial stability and passive income.</p>
+            <p style="font-weight:normal">Luxuro, the user-friendly Layer 1 blockchain, empowers developers with Python smart contracts and provides intuitive tools for seamless interaction with the blockchain and dApps.</p>
             <div class="text-center">
                 <a href="#what-is-luxuro" class="cta-button nav-link section-link">Learn More</a>
             </div>
