--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 you're a developer looking to deploy your project or an end user engaging with dApps, Luxuro's interface
                 ensures a smooth and engaging experience.</p>
 
-            <h2>Seamless Integration with Extension Wallet</h2>
+            <h2>Seamless Integration with our Extension Wallet</h2>
             <p>Luxuro goes beyond just blockchain functionality; it offers an extension wallet that simplifies the way
                 users manage their digital assets and interact with decentralized applications. The extension wallet
                 seamlessly connects users with the Luxuro ecosystem, providing a secure and convenient hub for accessing
