turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
         <nav class="flex-grow-1">
             <a class="nav-link section-link" href="#what-is-luxuro" id="nav-1">What is Luxuro?</a>
-            <a class="nav-link section-link" href="#governance" id="nav-2">Governance</a>
-            <a class="nav-link section-link" href="#ecosystem" id="nav-3">Ecosystem</a>
-            <a class="nav-link section-link" href="#developers" id="nav-4">Developers</a>
-            <a class="nav-link section-link" href="#bridge" id="nav-5">Bridge</a>
+            <a class="nav-link section-link" href="#swap" id="nav-2">Swap</a>
+            <a class="nav-link section-link" href="#pools" id="nav-3">Pools</a>
+            <a class="nav-link section-link" href="#governance" id="nav-4">Governance</a>
+
             <div>
                 <a href="#" class="connect-wallet">Connect Wallet</a>
             </div>
@@ -45,8 +45,9 @@
         <section class="content" id="home">
             <div id="webgl-container"></div>
             <h1>Welcome to Luxuro</h1>
-            <p style="font-weight:normal">Luxuro, the user-friendly Layer 1 blockchain, empowers developers with Python
-                smart contracts and provides intuitive tools for seamless interaction with the blockchain and dApps.</p>
+            <p style="font-weight:normal">Luxuro is a cutting-edge decentralized financial oasis, revolutionizing the
+                way you trade stablecoins and similar assets on the Lamden blockchain with unparalleled efficiency and
+                minimal slippage.</p>
             <div class="text-center">
                 <a href="#what-is-luxuro" class="cta-button nav-link section-link">Learn More</a>
             </div>
@@ -54,165 +55,87 @@
         </section>
         <section class="content" id="what-is-luxuro">
             <h1>What is Luxuro?</h1>
-            <p>Luxuro is a groundbreaking Layer 1 blockchain platform designed to revolutionize the way developers
-                create and deploy decentralized applications (dApps). Formerly known as Lamden, Luxuro takes blockchain
-                innovation to new heights by providing an environment that's both powerful and user-friendly.</p>
+            <p>Luxuro transcends traditional decentralized finance platforms, redefining the way stablecoins and similar
+                assets are traded on the Lamden blockchain. Immerse yourself in a sophisticated ecosystem that boasts an
+                array of features designed to optimize your trading journey.</p>
+            <h2>Efficiency Redefined:</h2>
 
-            <h2>Empowering Developers with Python Smart Contracts</h2>
-            <p>Luxuro sets itself apart by offering a Python-centric ecosystem for smart contract development. With its
-                seamless integration of the Python programming language, Luxuro makes it incredibly accessible for
-                developers to create complex and powerful smart contracts, streamlining the development process and
-                lowering the entry barrier for those familiar with Python programming.</p>
+            <p>Luxuro harnesses state-of-the-art algorithms and meticulously crafted liquidity pools to ensure trades
+                occur at lightning speed. Bid farewell to sluggish transaction times and seize every opportunity with
+                rapid executions that keep you ahead of the curve.</p>
+            <h2>Minimize Slippage, Maximize Gains:</h2>
 
-            <h2>User-Friendly Interaction with Blockchain and dApps</h2>
-            <p>One of Luxuro's core strengths is its commitment to user-friendly interaction. Luxuro provides intuitive
-                tools and interfaces that allow users to effortlessly interact with the blockchain and dApps. Whether
-                you're a developer looking to deploy your project or an end user engaging with dApps, Luxuro's interface
-                ensures a smooth and engaging experience.</p>
+            <p>Say goodbye to frustrating slippage that can eat into your gains. Luxuro's innovative trading mechanisms
+                offer minimal price slippage, empowering you to extract the utmost value from every trade and make your
+                assets work harder for you.</p>
+            <h2>A Haven of Stability:</h2>
 
-            <h2>Seamless Integration with our Extension Wallet</h2>
-            <p>Luxuro goes beyond just blockchain functionality; it offers an extension wallet that simplifies the way
-                users manage their digital assets and interact with decentralized applications. The extension wallet
-                seamlessly connects users with the Luxuro ecosystem, providing a secure and convenient hub for accessing
-                and managing blockchain-based assets.</p>
+            <p>Specializing in stablecoin trading, Luxuro provides a secure environment for managing assets pegged to
+                real-world currencies. Amidst the volatile crypto landscape, Luxuro offers stability, making it an ideal
+                platform to manage your wealth and strategic investments.</p>
+            <h2>Empowering Decentralization:</h2>
 
-            <h2>Join the Luxuro Revolution</h2>
-            <p>Experience the future of blockchain technology with Luxuro. Whether you're a developer seeking a powerful
-                and flexible platform for smart contract deployment, or an enthusiast looking to engage with
-                cutting-edge dApps, Luxuro is your gateway to a new era of decentralized innovation.</p>
+            <p>Luxuro's decentralized architecture liberates you from the constraints of intermediaries. Take control of
+                your assets and trades directly, while benefiting from the inherent security and transparency of
+                blockchain technology.</p>
+            <h2>User-Centric Interface:</h2>
 
-            <p>Discover Luxuro today and be a part of the next generation of blockchain advancement.</p>
+            <p>Navigating Luxuro's intuitive interface is a seamless experience whether you're a seasoned trader or a
+                newcomer to DeFi. Our user-centric design ensures accessibility and ease, enabling you to focus on what
+                truly matters—your trading strategies.</p>
+            <h2>Why Luxuro?</h2>
+
+            <p>Luxuro isn't just another platform; it's a gateway to a more efficient and secure trading realm. As you
+                venture into the dynamic world of decentralized finance, Luxuro's optimized features, unmatched
+                efficiency, and commitment to user satisfaction position it as a beacon of opportunity.</p>
+            <p>Explore Luxuro now and experience the future of trading—one where efficiency, stability, and control
+                merge seamlessly to enhance your financial journey.</p>
         </section>
         <section class="content" id="governance">
-            <h1>Blockchain Governance</h1>
-            <p>Empowering those at the heart of the Luxuro ecosystem, our Node Runner Governance model enables active
-                participation and influence in shaping the platform's future.</p>
+            <h1>Governance</h1>
+            <p>At Luxuro, we believe in the power of community and the collective wisdom that drives innovation. That's
+                why we're excited to introduce our governance feature, coming soon to empower Luxuro users like never
+                before.</p>
+            <h3>Your Voice, Your Impact:</h3>
 
-            <h2>Node Runner Decision-Making</h2>
-            <p>Luxuro's governance structure is tailored for Node Runners, providing a platform for proposing and
-                deciding on key protocol upgrades, optimizations, and operational changes that affect the blockchain's
-                performance and stability.</p>
+            <p>Luxuro's governance system puts the decision-making process directly in the hands of our users. Your
+                insights, suggestions, and ideas will shape the future of the platform, ensuring that it evolves in a
+                direction that truly resonates with your needs and aspirations.</p>
+            <h3>Participation and Influence:</h3>
 
-            <h2>Direct Impact on Platform Evolution</h2>
-            <p>Node Runners play a crucial role in Luxuro's development. By participating in the governance process,
-                they directly impact the platform's features, capabilities, and adaptability, ensuring it remains agile
-                and responsive to evolving needs.</p>
+            <p>As a Luxuro governance participant, you'll have the opportunity to propose and vote on key changes,
+                upgrades, and additions to the platform. This level of participation grants you influence over the
+                platform's development roadmap, enhancing its features and functionality in alignment with the
+                collective vision.</p>
+            <h3>Transparency and Trust:</h3>
 
-            <h2>Collaborative Innovation</h2>
-            <p>The Node Runner Governance fosters collaboration and collective decision-making, enabling Node Runners to
-                share insights, propose enhancements, and collectively address challenges, ultimately driving Luxuro's
-                growth as a cutting-edge blockchain platform.</p>
+            <p>Luxuro's governance model operates on a transparent and secure blockchain framework. Every decision,
+                proposal, and vote is recorded on the blockchain, ensuring the highest level of transparency and
+                fostering trust among the Luxuro community.</p>
+            <h3>How it Works:</h3>
 
-            <h2>Secure and Transparent Process</h2>
-            <p>Luxuro's governance process is conducted securely and transparently on the blockchain. Proposals and
-                voting outcomes are recorded publicly, ensuring accountability and visibility for everyone.</p>
+            <p>When Luxuro's governance feature is live, you'll be able to stake our native token to gain voting power.
+                This voting power translates to your ability to participate in shaping Luxuro's future, from choosing
+                new assets to be listed to proposing changes in platform fees and beyond.</p>
+            <h3>Join us in Shaping Tomorrow:</h3>
 
-            <h2>Join the Node Runner Governance</h2>
-            <p>If you're a Node Runner, your expertise and contribution are vital to Luxuro's success. Engage in the
-                governance process, collaborate with peers, and help shape the direction of the platform, solidifying
-                Luxuro's position as a pioneering blockchain ecosystem.</p>
+            <p>As Luxuro's governance feature approaches, we invite you to become an active participant in the evolution
+                of our platform. Together, we'll craft a financial ecosystem that reflects the values and aspirations of
+                our community, ensuring that Luxuro remains at the forefront of innovation and user-centric design.</p>
+            <p>Stay tuned for updates on Luxuro's governance journey and prepare to make your mark on the future of
+                decentralized finance.</p>
 
 
         </section>
-        <section class="content" id="ecosystem">
-            <h1>The Ecosystem</h1>
-            <p>Step into a world of boundless possibilities with the Luxuro Ecosystem. Our vision is to create a dynamic
-                and interconnected network that fosters innovation, collaboration, and the seamless integration of
-                blockchain technology.</p>
-
-            <h2>Endless Opportunities</h2>
-            <p>Luxuro offers a diverse and expanding array of decentralized applications (dApps) that cater to various
-                industries and use cases. From finance and gaming to supply chain and beyond, our ecosystem provides
-                endless opportunities for developers, businesses, and enthusiasts to explore and contribute.</p>
-
-            <h2>Developer-Centric Approach</h2>
-            <p>Central to our ecosystem is our commitment to developers. Luxuro provides an intuitive platform for
-                creating Python-powered smart contracts, making it easier than ever to build and deploy robust
-                blockchain applications. Join a community of developers who are shaping the future of blockchain
-                technology.</p>
-
-            <h2>Collaborative Innovation</h2>
-            <p>Luxuro thrives on collaboration. Through our open-source nature and community-driven governance, we
-                encourage developers, Node Runners, and enthusiasts to come together, share ideas, and contribute to the
-                evolution of the platform. Together, we're pioneering new solutions and pushing the boundaries of what's
-                possible.</p>
-
-            <h2>User-Focused Experience</h2>
-            <p>At Luxuro, we believe blockchain technology should be accessible to everyone. That's why we've developed
-                user-friendly tools and interfaces that allow both developers and users to seamlessly interact with the
-                blockchain and dApps, ensuring a smooth and engaging experience for all.</p>
-
-            <h2>Join the Luxuro Ecosystem</h2>
-            <p>Whether you're a developer, entrepreneur, or simply intrigued by blockchain's potential, the Luxuro
-                Ecosystem invites you to be a part of the revolution. Explore our growing range of dApps, engage with
-                our community, and discover how Luxuro is shaping the future of decentralized innovation.</p>
-
-            <p>Embark on a journey of innovation with Luxuro. Together, we're building a decentralized world of endless
-                possibilities.</p>
+        <section class="content" id="swap">
+            <h1>Swap</h1>
+            
         </section>
-        <section class="content" id="developers">
-            <h1>Luxuro for Developers</h1>
-            <p>Welcome to the forefront of blockchain innovation. Luxuro empowers developers with tools and resources to
-                create powerful and impactful decentralized applications (dApps) on our cutting-edge Layer 1 blockchain
-                platform.</p>
-
-            <h2>Python-Powered Smart Contracts</h2>
-            <p>Luxuro stands out with its Python-centric smart contract ecosystem, allowing developers to leverage their
-                Python programming skills to create complex and dynamic smart contracts. Dive into our <a
-                    href="link-to-smart-contract-docs">Smart Contract Language Documentation</a> to discover how to
-                harness the full potential of Python in blockchain development.</p>
-
-            <h2>Seamless Blockchain Integration</h2>
-            <p>Our intuitive <a href="link-to-blockchain-docs">Blockchain Documentation</a> provides a comprehensive
-                guide to seamlessly integrate Luxuro's blockchain into your projects. Whether you're deploying dApps or
-                optimizing performance, our documentation offers step-by-step guidance to ensure a smooth development
-                experience.</p>
-
-            <h2>Community-Driven Collaboration</h2>
-            <p>Luxuro's thriving developer community is driven by collaboration. Join our forums, engage with fellow
-                developers, and share insights. Collaborate on open-source projects, contribute to our ecosystem, and be
-                a part of shaping the future of blockchain technology.</p>
-
-            <h2>Developer-Focused Tools</h2>
-            <p>Access developer-friendly tools, libraries, and a rich development environment designed to enhance your
-                workflow. Our ecosystem empowers you to focus on creating innovative solutions while we handle the
-                complexities of blockchain infrastructure.</p>
-
-            <h2>Unlock the Future with Luxuro</h2>
-            <p>Whether you're new to blockchain or an experienced developer, Luxuro invites you to explore the limitless
-                possibilities of decentralized technology. Dive into our developer resources, engage with our community,
-                and let your creativity flourish as you build the decentralized future with Luxuro.</p>
-
-            <p>Start your journey into blockchain innovation with Luxuro. Your ideas, skills, and contributions are the
-                building blocks of our ecosystem.</p>
+        <section class="content" id="pools">
+            <h1>Pools</h1>
+            
         </section>
-        <section class="content" id="bridge">
-            <h1>Bridge</h1>
-            <p>Luxuro allows users to bridge the native asset between Binance Smart Chain and Luxuro.</p>
-            <div class="cards">
-                <div class="card" id="bridge-in-card">
-                    <div class="card-header">
-                        <h2>Bridge In</h2>
-                    </div>
-                    <input type="number" step="0.01" min="0" lang="en" placeholder="Enter Amount">
 
-                    <div class="text-center card-button">
-                        <a href="#" class="cta-button nav-link">Start</a>
-                    </div>
-                </div>
-                <div class="card" id="bridge-out-card">
-                    <div class="card-header">
-                        <h2>Bridge Out</h2>
-                    </div>
-                    <input type="number" step="0.01" min="0" lang="en" placeholder="Enter Amount">
-
-                    <div class="text-center card-button">
-                        <a href="#" class="cta-button nav-link">Start</a>
-                    </div>
-                </div>
-
-            </div>
-        </section>
     </main>
 
 
