--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three-js-csg/72.0.0/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three-csg@1.0.0/index.min.js"></script>
+
 
 
 </head>
@@ -43,7 +41,9 @@
 
     <main class="mt-5" style="display:flex">
         <section class="content" id="home">
-            <div id="webgl-container"></div>
+            <div id="webgl-container">
+                <img src="logo.svg" alt="Luxuro Logo" id="logo">
+            </div>
             <h1>Welcome to Luxuro</h1>
             <p style="font-weight:normal">Luxuro is a cutting-edge decentralized financial oasis, revolutionizing the
                 way you trade stablecoins and similar assets on the Lamden blockchain with unparalleled efficiency and
@@ -141,7 +141,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="fancy.js"></script>
-    <script src="webgl.js"></script>
+    <script src="webgl.js" type="module"></script>
 </body>
 
 </html>
