turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </header>
 
-    <main class="mt-5" style="display:flex">
+    <main style="display:flex">
         <section class="content" id="home">
             <div id="webgl-container">
                 <img src="logo.svg" alt="Luxuro Logo" id="logo">
