turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxuro</title>
+    <meta name="description" content="Luxuro is a cutting-edge decentralized financial oasis, revolutionizing the
+                way you trade stablecoins and similar assets on the Lamden blockchain with unparalleled efficiency and
+                minimal slippage.">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
