turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxuro</title>
-    <meta name="description" content="Luxuro is a cutting-edge decentralized financial oasis, revolutionizing the
+    <title>Luxuro | Lamden Decentralized Exchange</title>
+    <meta name="description" content="Luxuro is a cutting-edge decentralized exchange, revolutionizing the
                 way you trade stablecoins and similar assets on the Lamden blockchain with unparalleled efficiency and
                 minimal slippage.">
     <link rel="stylesheet" href="style.css">
@@ -49,7 +49,7 @@
                 <img src="logo.svg" alt="Luxuro Logo" id="logo">
             </div>
             <h1>Welcome to Luxuro</h1>
-            <p style="font-weight:normal">Luxuro is a cutting-edge decentralized financial oasis, revolutionizing the
+            <p style="font-weight:normal">Luxuro is a cutting-edge decentralized exchange, revolutionizing the
                 way you trade stablecoins and similar assets on the Lamden blockchain with unparalleled efficiency and
                 minimal slippage.</p>
             <div class="text-center">
@@ -59,7 +59,7 @@
         </section>
         <section class="content" id="what-is-luxuro">
             <h1>What is Luxuro?</h1>
-            <p>Luxuro transcends traditional decentralized finance platforms, redefining the way stablecoins and similar
+            <p>Luxuro transcends traditional decentralized finance, redefining the way stablecoins and similar
                 assets are traded on the Lamden blockchain. Immerse yourself in a sophisticated ecosystem that boasts an
                 array of features designed to optimize your trading journey.</p>
             <h2>Efficiency Redefined:</h2>
