turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 way you trade stablecoins and similar assets on the Lamden blockchain with unparalleled efficiency and
                 minimal slippage.</p>
             <div class="text-center">
-                <a href="#what-is-luxuro" class="cta-button nav-link section-link">Learn More</a>
+                <a href="#swap" class="cta-button nav-link section-link">Trade Now</a>
             </div>
 
         </section>
