turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link section-link" href="#pools" id="nav-3">Pools</a>
             <a class="nav-link section-link" href="#governance" id="nav-4">Governance</a>
 
-            <div>
+            <div class="border-btn">
                 <a href="#" class="connect-wallet">Connect Wallet</a>
             </div>
         </nav>
