turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -133,6 +133,38 @@
         </section>
         <section class="content" id="swap">
             <h1>Swap</h1>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-header">
+                        <h2>Exchange Currencies</h2>
+                    </div>
+                    <div>
+                        <div class="input-group-form">
+                            <span>From Luxuro</span>
+                            <span>Balance: 0.00000000</span>
+                        </div>
+                        <div class="input-group-with-image-right">
+                            <input type="number" placeholder="0.00" id="input-amount"/>
+                            <img src="logo.svg" alt="Luxuro Logo" class="input-image">
+                        </div>
+                    </div>
+
+                    <div class="swap-icon">
+                        <img src="swap-vertical.svg" alt="Swap Icon">
+                    </div>
+
+                    <div>
+                        <div class="input-group-form">
+                            <span>To Luxuro</span>
+                            <span>Balance: 0.00000000</span>
+                        </div>
+                        <div class="input-group-with-image-right">
+                            <input type="number" placeholder="0.00" id="output-amount"/>
+                            <img src="logo.svg" alt="Luxuro Logo" class="input-image">
+                        </div>
+                    </div>
+                </div>
+            </div>
             
         </section>
         <section class="content" id="pools">
