turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -165,7 +165,29 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="cards">
+                <div class="card">
+                    <div class="data">
+                        <span>Exchange rate (incl. fees):</span>
+                        <span>0.00000000</span>
+                    </div>
+                    <div class="data">
+                        <span>Price impact:</span>
+                        <span>0%</span>
+                    </div>
+                    <div class="data">
+                        <span>Trade routed through:</span>
+                        <span>TAULUSD</span>
+                    </div>
+                    <div class="data">
+                        <span>Slippage tolerance:</span>
+                        <span class="settings-span">0.1% <img src="cogwheel.svg" alt="Slippage settings" class="slippage-cog"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="btns-swap">
+            <a href="#" class="cta-button swap-button">Swap</a>
+        </div>
         </section>
         <section class="content" id="pools">
             <h1>Pools</h1>
