turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div>
                         <div class="input-group-form">
                             <span>From Luxuro</span>
-                            <span>Balance: 0.00000000</span>
+                            <span>Balance: <span id="from-balance">0.00000000</span></span>
                         </div>
                         <div class="input-group-with-image-right">
                             <input type="number" placeholder="0.00" id="input-amount"/>
@@ -156,7 +156,7 @@
                     <div>
                         <div class="input-group-form">
                             <span>To Luxuro</span>
-                            <span>Balance: 0.00000000</span>
+                            <span>Balance: <span id="to-balance">0.00000000</span></span>
                         </div>
                         <div class="input-group-with-image-right">
                             <input type="number" placeholder="0.00" id="output-amount"/>
