turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
                 <div class="pool-rows">
                     <div class="pool-rows-headers">
                         <span>Pool</span>
-                        <span>Base vAPY</span>
-                
+                        <span>APY</span>
                         <span>Volume</span>
                         <span>TVL</span>
                     </div>
