--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="pool-rows">
                     <div class="pool-rows-headers">
                         <span>Pool</span>
-                        <span>APY</span>
+                        <span>Fee APY</span>
                         <span>Volume</span>
                         <span>TVL</span>
                     </div>
