turn into curve.fi clone

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 
         <section class="content" id="swap">
             <h1>Swap</h1>
+            <div class="swap-container">
             <div class="cards">
                 <div class="card">
                     <div class="card-header">
@@ -152,7 +153,7 @@
             </div>
             <div class="btns-swap">
                 <a href="#" class="cta-button swap-button">Swap</a>
-            </div>
+            </div></div>
         </section>
         <section class="content" id="pools">
             <h1>Pools</h1>
