--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <thead>
                     <tr>
                     <th>Pool</th>
-                    <th>Fee APY</th>
+                    <th>Max APY</th>
                     <th>Volume</th>
                     <th>TVL</th>
                     <th></th>
@@ -181,7 +181,24 @@
                         </td>
                     </tr>
                     <tr class="pool-details">
-                        <td colspan="5"><!-- Details for Pool 1 --></td>
+                        <td colspan="5">
+                            <div class="data">
+                                <span>Pool ID:</span>
+                                <span>TAULUSD</span>
+                            </div>
+                            <div class="data">
+                                <span>Daily USD Volume:</span>
+                                <span>$24.98m</span>
+                            </div>
+                            <div class="data">
+                                <span>Liquidity utilization:</span>
+                                <span>27,820.02%</span>
+                            </div>
+                            <div class="data">
+                                <span>Fees</span>
+                                <span>0.60%</span>
+                            </div>
+                        </td>
                     </tr>
                     <tr class="pool-row">
                         <td class="pool-info">ETHLUSD</td>
@@ -195,7 +212,24 @@
                         </td>
                     </tr>
                     <tr class="pool-details">
-                        <td colspan="5"><!-- Details for Pool 2 --></td>
+                        <td colspan="5">
+                             <div class="data">
+                                <span>Pool ID:</span>
+                                <span>ETHLUSD</span>
+                            </div>
+                            <div class="data">
+                                <span>Daily USD Volume:</span>
+                                <span>$19.98m</span>
+                            </div>
+                            <div class="data">
+                                <span>Liquidity utilization:</span>
+                                <span>12,420.02%</span>
+                            </div>
+                            <div class="data">
+                                <span>Fees</span>
+                                <span>0.60%</span>
+                            </div>
+                        </td>
                     </tr>
                 </tbody>
             </table>
