--- a/index.html
+++ b/index.html
@@ -195,8 +195,24 @@
                                 <span>27,820.02%</span>
                             </div>
                             <div class="data">
-                                <span>Fees</span>
+                                <span>Fees:</span>
                                 <span>0.60%</span>
+                            </div>
+                            <div class="data mt-30px">
+                                <span class="bold">Your Position</span>
+                            </div>
+                            <div class="data">
+                                <span>Your Liquidity Points:</span>
+                                <span>0 LP (0.0000 TAU/0.0000 USD)</span>
+                            </div>
+                            <div class="data">
+                                <span>Your Rewards:</span>
+                                <span>0.0000 TAU / 0.0000 LUSD</span>
+                            </div>
+                            <div class="data btns-pool">
+                                <a href="#" class="cta-button m-0">Add Liquidity</a>
+                                <a href="#" class="cta-button m-0">Remove Liquidity</a>
+                                <a href="#" class="cta-button me-0">Claim Rewards</a>
                             </div>
                         </td>
                     </tr>
@@ -228,6 +244,22 @@
                             <div class="data">
                                 <span>Fees</span>
                                 <span>0.60%</span>
+                            </div>
+                            <div class="data mt-30px">
+                                <span class="bold">Your Position</span>
+                            </div>
+                            <div class="data">
+                                <span>Your Liquidity Points:</span>
+                                <span>0 LP (0.0000 TAU/0.0000 ETH)</span>
+                            </div>
+                            <div class="data">
+                                <span>Your Rewards:</span>
+                                <span>0.0000 TAU / 0.0000 ETH</span>
+                            </div>
+                            <div class="data btns-pool">
+                                <a href="#" class="cta-button m-0">Add Liquidity</a>
+                                <a href="#" class="cta-button m-0">Remove Liquidity</a>
+                                <a href="#" class="cta-button me-0">Claim Rewards</a>
                             </div>
                         </td>
                     </tr>
