--- a/index.html
+++ b/index.html
@@ -98,181 +98,204 @@
         <section class="content" id="swap">
             <h1>Swap</h1>
             <div class="swap-container">
-            <div class="cards">
-                <div class="card">
-                    <div class="card-header">
-                        <h2>Exchange Currencies</h2>
-                    </div>
-                    <div>
-                        <div class="input-group-form">
-                            <span>From Luxuro</span>
-                            <span>Balance: <span id="from-balance">0.00000000</span></span>
+                <div class="cards">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2>Exchange Currencies</h2>
                         </div>
-                        <div class="input-group-with-image-right">
-                            <input type="number" placeholder="0.00" id="input-amount" />
-                            <img src="logo.svg" alt="Luxuro Logo" class="input-image" id="input-image">
+                        <div>
+                            <div class="input-group-form">
+                                <span>From Luxuro</span>
+                                <span>Balance: <span id="from-balance">0.00000000</span></span>
+                            </div>
+                            <div class="input-group-with-image-right">
+                                <input type="number" placeholder="0.00" id="input-amount" />
+                                <img src="logo.svg" alt="Luxuro Logo" class="input-image" id="input-image">
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="swap-icon">
-                        <img src="swap-vertical.svg" alt="Swap Icon" id="switch-button">
-                    </div>
-
-                    <div>
-                        <div class="input-group-form">
-                            <span>To Luxuro</span>
-                            <span>Balance: <span id="to-balance">0.00000000</span></span>
+                        <div class="swap-icon">
+                            <img src="swap-vertical.svg" alt="Swap Icon" id="switch-button">
                         </div>
-                        <div class="input-group-with-image-right">
-                            <input type="number" placeholder="0.00" id="output-amount" />
-                            <img src="logo.svg" alt="Luxuro Logo" class="input-image" id="output-image">
+
+                        <div>
+                            <div class="input-group-form">
+                                <span>To Luxuro</span>
+                                <span>Balance: <span id="to-balance">0.00000000</span></span>
+                            </div>
+                            <div class="input-group-with-image-right">
+                                <input type="number" placeholder="0.00" id="output-amount" />
+                                <img src="logo.svg" alt="Luxuro Logo" class="input-image" id="output-image">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="cards">
-                <div class="card">
-                    <div class="data">
-                        <span>Exchange rate (incl. fees):</span>
-                        <span>0.00000000</span>
-                    </div>
-                    <div class="data">
-                        <span>Price impact:</span>
-                        <span>0%</span>
-                    </div>
-                    <div class="data">
-                        <span>Trade routed through:</span>
-                        <span>TAULUSD</span>
-                    </div>
-                    <div class="data">
-                        <span>Slippage tolerance:</span>
-                        <span class="settings-span">0.1% <img src="cogwheel.svg" alt="Slippage settings"
-                                class="slippage-cog" id="slippage-button"></span>
+                <div class="cards">
+                    <div class="card">
+                        <div class="data">
+                            <span>Exchange rate (incl. fees):</span>
+                            <span>0.00000000</span>
+                        </div>
+                        <div class="data">
+                            <span>Price impact:</span>
+                            <span>0%</span>
+                        </div>
+                        <div class="data">
+                            <span>Trade routed through:</span>
+                            <span>TAULUSD</span>
+                        </div>
+                        <div class="data">
+                            <span>Slippage tolerance:</span>
+                            <span class="settings-span">0.1% <img src="cogwheel.svg" alt="Slippage settings"
+                                    class="slippage-cog" id="slippage-button"></span>
+                        </div>
                     </div>
                 </div>
+                <div class="btns-swap">
+                    <a href="#" id="swap-button" class="cta-button swap-button">Swap</a>
+                </div>
             </div>
-            <div class="btns-swap">
-                <a href="#" id="swap-button" class="cta-button swap-button">Swap</a>
-            </div></div>
         </section>
         <section class="content" id="pools">
             <h1>Pools</h1>
             <div class="table-container">
-            <table class="pool-table">
-                <thead>
-                    <tr>
-                    <th>Pool</th>
-                    <th>Max APY</th>
-                    <th>Volume</th>
-                    <th>TVL</th>
-                    <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="pool-row">
-                        <td class="pool-info">TAULUSD</td>
-                        <td class="pool-info">0.20%</td>
-                        <td class="pool-info">$24.98m</td>
-                        <td class="pool-info">$321.55m</td>
-                        <td class="pool-info">
-                            <div class="icon-right-arrow">
-                                <img src="right-arrow.svg" class="arrow" alt="Right Arrow">
-                            </div>
-                        </td>
-                    </tr>
-                    <tr class="pool-details">
-                        <td colspan="5">
-                            <div class="data">
-                                <span>Pool ID:</span>
-                                <span>TAULUSD</span>
-                            </div>
-                            <div class="data">
-                                <span>Daily USD Volume:</span>
-                                <span>$24.98m</span>
-                            </div>
-                            <div class="data">
-                                <span>Liquidity utilization:</span>
-                                <span>27,820.02%</span>
-                            </div>
-                            <div class="data">
-                                <span>Fees:</span>
-                                <span>0.60%</span>
-                            </div>
-                            <div class="data mt-30px">
-                                <span class="bold">Your Position</span>
-                            </div>
-                            <div class="data">
-                                <span>Your Liquidity Points:</span>
-                                <span>0 LP (0.0000 TAU/0.0000 USD)</span>
-                            </div>
-                            <div class="data">
-                                <span>Your Rewards:</span>
-                                <span>0.0000 TAU / 0.0000 LUSD</span>
-                            </div>
-                            <div class="data btns-pool">
-                                <a href="#" class="cta-button m-0 add-liquidity">Add Liquidity</a>
-                                <a href="#" class="cta-button m-0 remove-liquidity">Remove Liquidity</a>
-                                <a href="#" class="cta-button me-0 claim-rewards">Claim Rewards</a>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr class="pool-row">
-                        <td class="pool-info">ETHLUSD</td>
-                        <td class="pool-info">0.20%</td>
-                        <td class="pool-info">$19.98m</td>
-                        <td class="pool-info">$652.11m</td>
-                        <td class="pool-info">
-                            <div class="icon-right-arrow">
-                                <img src="right-arrow.svg" class="arrow" alt="Right Arrow">
-                            </div>
-                        </td>
-                    </tr>
-                    <tr class="pool-details">
-                        <td colspan="5">
-                             <div class="data">
-                                <span>Pool ID:</span>
-                                <span>ETHLUSD</span>
-                            </div>
-                            <div class="data">
-                                <span>Daily USD Volume:</span>
-                                <span>$19.98m</span>
-                            </div>
-                            <div class="data">
-                                <span>Liquidity utilization:</span>
-                                <span>12,420.02%</span>
-                            </div>
-                            <div class="data">
-                                <span>Fees</span>
-                                <span>0.60%</span>
-                            </div>
-                            <div class="data mt-30px">
-                                <span class="bold">Your Position</span>
-                            </div>
-                            <div class="data">
-                                <span>Your Liquidity Points:</span>
-                                <span>0 LP (0.0000 TAU/0.0000 ETH)</span>
-                            </div>
-                            <div class="data">
-                                <span>Your Rewards:</span>
-                                <span>0.0000 TAU / 0.0000 ETH</span>
-                            </div>
-                            <div class="data btns-pool">
-                                <a href="#" class="cta-button m-0 add-liquidity">Add Liquidity</a>
-                                <a href="#" class="cta-button m-0 remove-liquidity">Remove Liquidity</a>
-                                <a href="#" class="cta-button me-0 claim-rewards">Claim Rewards</a>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-</div>
+                <table class="pool-table">
+                    <thead>
+                        <tr>
+                            <th>Pool</th>
+                            <th>Max APY</th>
+                            <th>Volume</th>
+                            <th>TVL</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="pool-row">
+                            <td class="pool-info">TAULUSD</td>
+                            <td class="pool-info">0.20%</td>
+                            <td class="pool-info">$24.98m</td>
+                            <td class="pool-info">$321.55m</td>
+                            <td class="pool-info">
+                                <div class="icon-right-arrow">
+                                    <img src="right-arrow.svg" class="arrow" alt="Right Arrow">
+                                </div>
+                            </td>
+                        </tr>
+                        <tr class="pool-details">
+                            <td colspan="5">
+                                <div class="data">
+                                    <span>Pool ID:</span>
+                                    <span>TAULUSD</span>
+                                </div>
+                                <div class="data">
+                                    <span>Daily USD Volume:</span>
+                                    <span>$24.98m</span>
+                                </div>
+                                <div class="data">
+                                    <span>Liquidity utilization:</span>
+                                    <span>27,820.02%</span>
+                                </div>
+                                <div class="data">
+                                    <span>Fees:</span>
+                                    <span>0.60%</span>
+                                </div>
+                                <div class="data mt-30px">
+                                    <span class="bold">Your Position</span>
+                                </div>
+                                <div class="data">
+                                    <span>Your Liquidity Points:</span>
+                                    <span>0 LP (0.0000 TAU/0.0000 USD)</span>
+                                </div>
+                                <div class="data">
+                                    <span>Your Rewards:</span>
+                                    <span>0.0000 TAU / 0.0000 LUSD</span>
+                                </div>
+                                <div class="data btns-pool">
+                                    <a href="#" class="cta-button m-0 add-liquidity">Add Liquidity</a>
+                                    <a href="#" class="cta-button m-0 remove-liquidity">Remove Liquidity</a>
+                                    <a href="#" class="cta-button me-0 claim-rewards">Claim Rewards</a>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr class="pool-row">
+                            <td class="pool-info">ETHLUSD</td>
+                            <td class="pool-info">0.20%</td>
+                            <td class="pool-info">$19.98m</td>
+                            <td class="pool-info">$652.11m</td>
+                            <td class="pool-info">
+                                <div class="icon-right-arrow">
+                                    <img src="right-arrow.svg" class="arrow" alt="Right Arrow">
+                                </div>
+                            </td>
+                        </tr>
+                        <tr class="pool-details">
+                            <td colspan="5">
+                                <div class="data">
+                                    <span>Pool ID:</span>
+                                    <span>ETHLUSD</span>
+                                </div>
+                                <div class="data">
+                                    <span>Daily USD Volume:</span>
+                                    <span>$19.98m</span>
+                                </div>
+                                <div class="data">
+                                    <span>Liquidity utilization:</span>
+                                    <span>12,420.02%</span>
+                                </div>
+                                <div class="data">
+                                    <span>Fees</span>
+                                    <span>0.60%</span>
+                                </div>
+                                <div class="data mt-30px">
+                                    <span class="bold">Your Position</span>
+                                </div>
+                                <div class="data">
+                                    <span>Your Liquidity Points:</span>
+                                    <span>0 LP (0.0000 TAU/0.0000 ETH)</span>
+                                </div>
+                                <div class="data">
+                                    <span>Your Rewards:</span>
+                                    <span>0.0000 TAU / 0.0000 ETH</span>
+                                </div>
+                                <div class="data btns-pool">
+                                    <a href="#" class="cta-button m-0 add-liquidity">Add Liquidity</a>
+                                    <a href="#" class="cta-button m-0 remove-liquidity">Remove Liquidity</a>
+                                    <a href="#" class="cta-button me-0 claim-rewards">Claim Rewards</a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
 
     </main>
 
+    <div class="modal micromodal-slide" id="token-select-modal" aria-hidden="true">
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="token-select-modal-title">
+            <div class="modal__header">
+              <h2 class="modal__title" id="token-select-modal-title">
+                Token Select
+              </h2>
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+            </div>
+            <div class="modal__content" id="token-select-modal-content">
+              <p>
+                Try hitting the <code>tab</code> key and notice how the focus stays within the modal itself. Also, <code>esc</code> to close modal.
+              </p>
+            </div>
+            <div class="modal__footer">
+              <button class="modal__btn modal__btn-primary">Select</button>
+              <button class="modal__btn" data-micromodal-close aria-label="Close this dialog window">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
     <script src="fancy.js"></script>
     <script src="swap.js"></script>
 </body>
