--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Favicon -->
-    <link rel="shortcut icon" href="logo_white.svg" type="image/svg" />
+    <link rel="icon" id="light-scheme-icon" href="logo_white.svg" type="image/svg" />
+    <link rel="icon" id="dark-scheme-icon" href="logo.svg" type="image/svg" />
     <link
       href="https://fonts.googleapis.com/css2?family=Questrial&display=swap"
       rel="stylesheet"
