--- a/index.html
+++ b/index.html
@@ -386,6 +386,10 @@
                     <img src="logo.svg" alt="Token 1" class="token-image">
                     <span class="token-name">Luxuro</span>
                 </li>
+                <li class="token-option" data-token="TAU">
+                    <img src="lamden.svg" alt="Token 1" class="token-image">
+                    <span class="token-name">TAU</span>
+                </li>
                 
                 <!-- Add more token options here -->
                 </ul>
