--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <h2 class="modal__title" id="token-select-modal-title">
             Token Select
           </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close><img src="x-icon.svg" alt="Close Icon" class="close-icon"></button>
         </div>
         <div class="modal__content" id="token-select-modal-content">
           <p>Select a verified token to be used in the trade.</p>
@@ -352,7 +352,7 @@
           <h2 class="modal__title" id="slippage-settings-modal-title">
             Slippage Settings
           </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close><img src="x-icon.svg" alt="Close Icon" class="close-icon"></button>
         </div>
         <div class="modal__content" id="slippage-settings-modal-content">
           <p>Setting a high slippage tolerance can help transactions succeed, but you may not get such a good price. Use
@@ -377,7 +377,7 @@
           <h2 class="modal__title" id="add-liquidity-modal-title">
             Add Liquidity
           </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close><img src="x-icon.svg" alt="Close Icon" class="close-icon"></button>
         </div>
         <div class="modal__content" id="add-liquidity-modal-content">
           <p>Adding liquidity to a pool will earn you fees proportional to your share of the pool. Fees are added to
@@ -402,7 +402,9 @@
           <h2 class="modal__title" id="remove-liquidity-modal-title">
             Remove Liquidity
           </h2>
-          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close>
+            <img src="x-icon.svg" alt="Close Icon" class="close-icon">
+          </button>
         </div>
         <div class="modal__content" id="remove-liquidity-modal-content">
           <p>Removing liquidity will burn the amount of liquidity tokens you specified. You will
